--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Security Check</title>
+    <title>The Pro Program</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+  <h1> The Pro Program </h1>
+  <h2> The latest Yankee Game. </h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/NYOCOYqx06c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<a href="webpages/sports/football.html">Football Page</a>
+<a href="webpages/sports/soccer.html">Soccer Page</a>
+<a href="webpages/sports/credits.html">Credits</a>
+<a href="http://blog.proprogram.net">Blogs</a>
   <body>
-    <meta http-equiv="Refresh" content="0.1; url='https://cdn.proprogram.net/webpages/sports'" />
     <script src="script.js"></script>
   </body>
 </html>
