--- a/content/minecraft/index.html
+++ b/content/minecraft/index.html
@@ -1,5 +1,3 @@
-<title>Minecraft Versions</title>
-<h1>Minecraft Versions</h1>
-<p><a href="1.17.zip">1.17</a></p>
-<p><a href="1.16.5.zip">1.16.5</a></p>
-<p><a href="1.100.4.zip">1.100.4</a></p>
+<title>Minecraft Client Releases</title>
+<h1>Minecraft Client Releases</h1>
+<p><a href="Pro Gamer Client.zip">Pro Gamer Client V1.1</a></p>
