--- a/content/minecraft/index.html
+++ b/content/minecraft/index.html
@@ -1,3 +1,3 @@
 <title>Minecraft Client Releases</title>
 <h1>Minecraft Client Releases</h1>
-<p><a href="Pro Gamer Client.zip">Pro Gamer Client V1.1</a></p>
+<p><a href="https://www.mediafire.com/file/oru3ug32enoomze/Pro_Gamer_Client.zip/file">Download Pro Gamer Client Latest</a></p>
