--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>The Pro Program</title>
-    <link href="https://cdn.proprogram.net/content/memecafe/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <h1> The Pro Program </h1>
   <h2> The latest Yankee Game. </h2>
